docs/assets/styles/docs.css
/* ... */
.layout-splash:not(.scrolled-down) #header {
  background-color: transparent;
}

.layout-splash:not(.scrolled-down) #header::after {
  border-color: transparent;
}

.splash {
  font-size: 1.375rem;
  font-weight: var(--quiet-font-weight-bold);
  line-height: 1.4;
  text-align: center;
  padding-inline: 2rem;
  margin-block: 20dvh;
}

.splash img {
  display: block;
  width: 100%;
  max-width: 600px;
  margin-inline: auto;
  margin-block-end: 4dvh;
}

.splash .subtitle {
  font-size: 2.25rem;
}

.splash-actions {
  display: flex;
  gap: 1rem;
  justify-content: center;
  margin-block-start: 4rem;
}

@media screen and (max-width: 600px) {
  .splash-actions {
    flex-direction: column;
    align-items: center;
    margin-block-start: 4rem;
    margin-block-end: 0;

    quiet-button {
      width: fit-content;
    }
  }
}

@media screen and (max-width: 959px) {
  .splash {
    font-size: 1rem;
    line-height: 1.3;
    margin-block: 2rem;
  }

  .splash .subtitle {
    font-size: 1.5rem;
  }

  #body:has(.splash) {
    min-height: 0;
  }
}

.sponsorship-quote {
  border: var(--quiet-border-style) var(--quiet-border-width) var(--quiet-neutral-stroke-softer);
  border-radius: calc(var(--quiet-border-radius) * 6);
  box-shadow: var(--quiet-shadow-softer);
  text-align: center;
  padding: 2rem;
  margin-block: calc(var(--quiet-content-spacing) * 1.5);
  scale: 1.025;

  .quote {
    display: flex;
    align-items: start;
    gap: 2rem;
    font-size: 1.25rem;
  }

  quiet-button {
    width: 100%;
    margin-block-start: 2rem;
  }

  img {
    max-width: 5rem;
    height: auto;
    border-radius: 50%;
  }

  @media screen and (max-width: 959px) {
    & .quote {
      flex-direction: column;
      align-items: center;
    }

    & quiet-button {
      max-width: 80%;
    }
  }
}

/* Tables */
.table-reflects {
  font-size: 1.25em;
  text-align: center;

  [name='check'] {
    color: var(--quiet-constructive-text-colorful);
  }

  [name='x'] {
    color: var(--quiet-destructive-text-colorful);
  }
}

.table-scroll {
  max-width: 100%;
  overflow-x: auto;
}

/* Component pages */
.component-summary {
  font-size: 1.25rem;
}

.component-table td:not(.table-description) code,
.dependency-list code {
  background: none;
}

.table-description {
  min-width: 30ch;
}

.table-name code,
.table-attribute code,
.table-type code,
.table-selector code,
.table-default code {
  display: inline-block;
  white-space: nowrap;
}

